--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,25 +12,33 @@
   gap: 0.5rem;
 }
 
-#navbar form {
+form {
   display: flex;
-  gap: 0.5rem;
+  justify-content: center;
 }
 
-#navbar input {
+input {
   padding: 0.2rem 0.8rem;
-  border-radius: 4px;
+  border-radius: 10px 0 0 10px;
   border: none;
+  max-width: 800px;
+  width: 100%;
+  height: 48px;
 }
 
-#navbar form button {
+input:focus {
+  outline: none;
+}
+
+form button {
   background-color: #f7d354;
   border: 2px solid #f7d354;
-  border-radius: 4px;
+  border-radius: 0 10px 10px 0;
   color: #000;
-  padding: 0.3rem;
+  padding: 0.3rem 0.8rem;
   font-size: 1.3rem;
   display: flex;
   align-items: center;
   cursor: pointer;
+  height: 48px;
 }
