--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: #000;
+  height: 100vh;
 }
 
 a {
@@ -17,4 +18,11 @@ a {
 
 a:hover {
   color: #b8930c;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 60px);
+  justify-content: center;
 }
