--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,6 +12,10 @@
   gap: 0.5rem;
 }
 
+#navbar a {
+  color: #aa1ce5;
+}
+
 form {
   display: flex;
   justify-content: center;
@@ -21,9 +25,9 @@ input {
   padding: 0.2rem 0.8rem;
   border-radius: 10px 0 0 10px;
   border: none;
-  max-width: 800px;
+  max-width: 670px;
   width: 100%;
-  height: 48px;
+  height: 60px;
   font-size: 18px;
 }
 
@@ -32,8 +36,8 @@ input:focus {
 }
 
 form button {
-  background-color: #f7d354;
-  border: 2px solid #f7d354;
+  background-color: #aa1ce5;
+  border: 2px solid #aa1ce5;
   border-radius: 0 10px 10px 0;
   color: #000;
   padding: 0.3rem 0.8rem;
@@ -41,5 +45,5 @@ form button {
   display: flex;
   align-items: center;
   cursor: pointer;
-  height: 48px;
+  height: 60px;
 }
