--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -26,6 +26,11 @@
   margin-bottom: 1rem;
 }
 
+.movie-card .movie-title {
+  padding-top: 20px;
+  padding-bottom: 37px;
+}
+
 .movie-page .movie-card h2 {
   font-size: 2rem;
 }
