--- a/src/pages/MoviesGrid.css
+++ b/src/pages/MoviesGrid.css
@@ -43,20 +43,21 @@
 }
 
 .movies-container div svg {
-  color: #f7d354;
+  color: white;
 }
 
 .movies-container div a {
-  background-color: #f7d354;
-  border: 2px solid #f7d354;
-  border-radius: 4px;
-  color: #000;
-  padding: 1rem 0.5rem;
-  text-align: center;
+  background-color: #aa1ce5;
+  border: 2px solid #aa1ce5;
+  border-radius: 10px;
+  color: white;
+  padding: 10px 17px;
   font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .movies-container div a:hover {
   background-color: transparent;
-  color: #f7d354;
 }
