--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -29,6 +29,7 @@
 .movie-card .movie-title {
   padding-top: 20px;
   padding-bottom: 37px;
+  padding: 1rem 0 1rem 1rem;
 }
 
 .movie-page .movie-card h2 {
