--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -1,8 +1,7 @@
-.footer-h2{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    background-color: #121212;
-    color: white;
-  }
+.Footer {
+  padding: 1rem 2rem;
+  background-color: #121212;
+}
+.footer-h2 {
+  color: white;
+}
