--- a/src/index.css
+++ b/src/index.css
@@ -28,13 +28,14 @@ a:hover {
   z-index: 1;
 }
 
-.banner{
+.banner {
   background: url(/src/img/Filmes.png);
   background-size: cover;
 }
 
 .container .title {
-  font-size: 6rem;
+  font-size: 4rem;
   color: white;
   text-align: center;
+  margin-top: 4rem;
 }
