--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #121212;
+  background-color: #18181B;
+  
 }
 
 #navbar h2 a {
@@ -14,6 +15,10 @@
 
 #navbar a {
   color: #aa1ce5;
+  font-family: 'Haettenschweiler', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
 }
 
 form {
@@ -28,18 +33,25 @@ input {
   max-width: 670px;
   width: 100%;
   height: 60px;
-  font-size: 18px;
+
 }
 
 input:focus {
   outline: none;
 }
 
+::-webkit-input-placeholder {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 19px;
+  color: #C4C4C5;
+}
+
 form button {
   background-color: #aa1ce5;
   border: 2px solid #aa1ce5;
   border-radius: 0 10px 10px 0;
-  color: #000;
+  color: #C4C4C5;
   padding: 0.3rem 0.8rem;
   font-size: 1.3rem;
   display: flex;
