--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -1,7 +1,33 @@
 .Footer {
   padding: 1rem 2rem;
-  background-color: #121212;
+  background-color: #18181B;
+  display: flex;
+  flex-direction: row;
 }
 .footer-h2 {
-  color: white;
+  font-family: 'Haettenschweiler', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 23px;
+  color: #C4C4C5;
+}
+
+.footer-cop{
+font-family: 'Inter', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 24px;
+color: #C4C4C5;
+}
+
+.footer-res{
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #C4C4C5;
+
 }
