--- a/src/pages/MoviesGrid.css
+++ b/src/pages/MoviesGrid.css
@@ -1,5 +1,12 @@
+.container{
+  background-color: #1F1F23;
+}
+
 .container .subtitle {
-  color: #fff;
+  
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  color: #EFEFF1;
   font-size: 2rem;
   text-align: center;
   margin: 2rem 0 1rem;
@@ -44,19 +51,22 @@
 }
 
 .movies-container div svg {
-  color: white;
+  color: #EFEFF1;
 }
 
 .movies-container div a {
   background-color: #aa1ce5;
   border: 2px solid #aa1ce5;
   border-radius: 0 0 10px 10px;
-  color: white;
   padding: 10px 17px;
-  font-weight: bold;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 19px;
+  color: #EFEFF1;
 }
 
 .movies-container div a:hover {
