--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -5,6 +5,7 @@
   display: flex;
   gap: 2rem;
   justify-content: center;
+  
 }
 
 .movie-page svg {
@@ -14,6 +15,8 @@
 
 .movie-info {
   max-width: 500px;
+  align-items: center;
+  justify-items: center;
 }
 
 @media (max-width: 1024px) {
@@ -35,6 +38,11 @@
   margin-bottom: 1rem;
 }
 
+.movie-page .movie-card img{
+  width: 350px;
+  height: 525px;
+}
+
 .movie-card .movie-title {
   padding-top: 20px;
   padding-bottom: 37px;
@@ -48,6 +56,7 @@
 
 .movie-page .movie-card h2 {
   font-size: 2rem;
+  
 }
 
 .movie-page .movie-card p {
@@ -55,6 +64,7 @@
   align-items: center;
   justify-content: center;
   gap: 0.4rem;
+  
 }
 
 .tagline {
@@ -64,16 +74,24 @@
 }
 
 .info {
-  margin-bottom: 1.5rem;
+  margin-bottom: .9375rem;
 }
 
 .info h3 {
-  margin-bottom: 1rem;
+  margin-bottom: .75rem;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: .625rem;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 19px;
+  color: #EFEFF1;
 }
 
 .description p {
-  line-height: 1.4rem;
+  text-align: justify;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  color: #EFEFF1;
 }
