--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,8 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #18181B;
-  
+  background-color: #18181b;
 }
 
 #navbar h2 a {
@@ -15,47 +14,8 @@
 
 #navbar a {
   color: #aa1ce5;
-  font-family: 'Haettenschweiler', sans-serif;
+  font-family: "Haettenschweiler", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 28px;
-}
-
-form {
-  display: flex;
-  justify-content: center;
-}
-
-input {
-  padding: 0.2rem 0.8rem;
-  border-radius: 10px 0 0 10px;
-  border: none;
-  max-width: 670px;
-  width: 100%;
-  height: 60px;
-
-}
-
-input:focus {
-  outline: none;
-}
-
-::-webkit-input-placeholder {
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  font-size: 19px;
-  color: #C4C4C5;
-}
-
-form button {
-  background-color: #aa1ce5;
-  border: 2px solid #aa1ce5;
-  border-radius: 0 10px 10px 0;
-  color: #C4C4C5;
-  padding: 0.3rem 0.8rem;
-  font-size: 1.3rem;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  height: 60px;
 }
