--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 * {
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  background-color: #1F1F23;
+  background-color: #1f1f23;
   height: 100vh;
 }
 
@@ -35,11 +34,113 @@ a:hover {
 
 .container .title {
   font-size: 7.75rem;
-  color: #EFEFF1;
+  color: #efeff1;
   text-align: center;
-  font-family: 'Haettenschweiler', sans-serif;
+  font-family: "Haettenschweiler", sans-serif;
   font-style: normal;
   font-weight: 400;
+}
+
+@media (max-width: 1290px) {
+  .container .title {
+    font-size: 5.75rem;
+  }
+  .container .subtitle {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container .title {
+    font-size: 4.75rem;
+  }
+  .container .subtitle {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .container .title {
+    font-size: 3.75rem;
+  }
+  .container .subtitle {
+    font-size: 1.25rem;
+    margin-top: 1rem;
+  }
+}
+
+@media (max-width: 572px) {
+  .container .title {
+    font-size: 2.75rem;
+  }
+  .container .subtitle {
+    font-size: 1rem;
+    width: 335px;
+    align-self: center;
+  }
+}
+
+form {
+  display: flex;
+  justify-content: center;
+}
+
+input {
+  padding: 0.2rem 0.8rem;
+  border-radius: 10px 0 0 10px;
+  border: none;
+  max-width: 670px;
+  width: 100%;
+  height: 60px;
+  font-size: 1.75rem;
+}
+
+input:focus {
+  outline: none;
+}
+
+::-webkit-input-placeholder {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 1.75rem;
+  color: #c4c4c5;
+}
+
+form button {
+  background-color: #aa1ce5;
+  border: 2px solid #aa1ce5;
+  border-radius: 0 10px 10px 0;
+  color: #c4c4c5;
+  padding: 0.3rem 0.8rem;
+  font-size: 1.25rem;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  height: 60px;
+}
+
+@media (max-width: 768px) {
+  input {
+    width: 70%;
+    font-size: 1rem;
+  }
+  ::-webkit-input-placeholder {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 572px) {
+  input {
+    width: 60%;
+    height: 40px;
+    font-size: 0.75rem;
+  }
+  form button {
+    height: 40px;
+  }
+  ::-webkit-input-placeholder {
+    font-size: 0.75rem;
+  }
 }
 
 html ::-webkit-scrollbar {
