--- a/src/pages/MoviesGrid.css
+++ b/src/pages/MoviesGrid.css
@@ -12,7 +12,7 @@
 }
 
 .title-busca {
-  font-family: "Inter", sans-serif;
+  font-family: "Haettenschweiler", sans-serif;
   font-weight: 500;
   padding: 2rem;
   max-width: 75rem;
