--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -20,6 +20,12 @@
   }
 }
 
+@media (max-width: 400px) {
+  .movie-page {
+    height: 150vh;
+  }
+}
+
 .movie-page .movie-card p {
   display: none !important;
 }
@@ -32,11 +38,13 @@
 .movie-info {
   max-width: 500px;
   margin-top: 6.25rem;
+  word-break: break-word;
 }
 
 @media (max-width: 1024px) {
   .movie-page {
     flex-direction: column;
+    height: 115vh;
   }
   .movie-info {
     margin: 0 auto;
@@ -54,8 +62,16 @@
 }
 
 .movie-page .movie-card img {
-  width: 350px;
-  height: 525px;
+  max-width: 350px;
+  max-height: 525px;
+}
+
+@media (max-width: 400px) {
+  .movie-page .movie-card img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
 }
 
 .movie-card .movie-title {
